basic html & css for the requirements

--- a/index.html
+++ b/index.html
@@ -7,5 +7,47 @@
     <title>Tribute Page: Dr. Norman</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main id="main">
+      <h1 id="title">Foo Fighters Band</h1>
+      <figure id="img-div">
+        <img
+          id="image"
+          src="https://upload.wikimedia.org/wikipedia/commons/4/4b/FoosLondonStad220618-124_%2842989552522%29.jpg"
+          alt="Foo Fighters after performing in June 2018"
+        />
+        <figcaption id="img-caption">
+          From left to right: Chris Shiflett, Taylor Hawkins, Dave Grohl, Nate
+          Mendel, Rami Jaffee, and Pat Smear.
+        </figcaption>
+      </figure>
+      <section id="tribute-info">
+        <ul>
+          <li>
+            members
+            <ul>
+              <li>Dave Grohl (Lead vocals & guitar)</li>
+              <li>Nate Mendel (Bass guitar)</li>
+              <li>Pat Smear (Lead guitas)</li>
+              <li>Chris Shiflett (Guitar)</li>
+              <li>Rami Jaffee (Keyboards)</li>
+              <li>Taylor Hawkins (Drums)</li>
+            </ul>
+          </li>
+          <li>1990: Dave Grohl joined the grunge band Nirvana as drummer</li>
+        </ul>
+      </section>
+      <footer>
+        <p>
+          Find out more about this band: visit
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Foo_Fighters"
+            target="_blank"
+            >Wikipedia page</a
+          >.
+        </p>
+      </footer>
+    </main>
+  </body>
 </html>
